--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,32 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <header class="shadow">
+      <nav class="container">
+          <a href="#" class="brand">LOGO</a >
+          <ul class="hide-on-small" >
+              <li><a href="#">menu1</a></li>
+              <li><a href="#">menu2</a></li>
+              <li><a href="#">menu3</a></li>
+              <li><a href="#">menu4</a></li>
+          </ul>
+          <div class="hide-on-large small-menu-btn">
+              <svg class=" menu-icon open-icon"  height="30" viewBox="0 0 24 24" width="30"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>
+              <svg class="active-menu-icon menu-icon close-icon" height="30" viewBox="0 0 24 24" width="30"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+          </div>
+      </nav>
+      <div class="small-menu shadow small-menu-active">
+          <ul class="" >
+              <li class="shadow"><a href="#">menu1</a></li>
+              <li class="shadow"><a href="#">menu2</a></li>
+              <li class="shadow"><a href="#">menu3</a></li>
+              <li class="shadow"><a href="#">menu4</a></li>
+          </ul>
+      </div>
+  </header>
+    <div id="root">
+      
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
